[project]
name = "adventofcode"
version = "0.0.1"
description = "Advent of Code solutions."
authors = [{name = "Pete Dibdin"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adventus @ git+https://github.com/pjd199/adventus.git@main",
    "numpy>=2.3"
]

[project.urls]
Homepage = "https://github.com/pjd199/adventofcode"
Repository = "https://github.com/pjd199/adventofcode"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-select = ["I"]
fix = true

[tool.adventus]
cache = ".adventus"